<resources>
    <string name="app_name">Nonogram</string>
    <string name="heart_description">heart symbolizing tries lefts</string>
    <string name="rows">Rows</string>
    <string name="columns">Columns</string>
    <string name="difficulty">Difficulty</string>
    <string name="select_level">Select level</string>
    <string name="random_level">Random level</string>
    <string name="new_level">New level</string>
    <string name="select_account">Select account</string>
    <string name="saved_account_id">SAVED_ACCOUNT_ID</string>
    <string name="greeting">Hello %1$s!</string>
    <string name="id">ID</string>
    <string name="dimensions">Dimensions</string>
    <string name="written_dimensions">%1$dx%2$d</string>
    <string name="completed">Completed</string>
    <string name="yes">YES</string>
    <string name="my_username">my_username</string>
    <string name="password">Password</string>
    <string name="hidden_password">********</string>
    <string name="username">Username</string>
    <string name="no">NO</string>
</resources>