<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/minTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/rows"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/rows_picker"
        app:layout_constraintStart_toStartOf="@+id/rows_picker"
        app:layout_constraintTop_toTopOf="parent" />

    <NumberPicker
        android:id="@+id/rows_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/cols_picker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minTextView" />

    <TextView
        android:id="@+id/maxTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/columns"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/cols_picker"
        app:layout_constraintStart_toStartOf="@+id/cols_picker"
        app:layout_constraintTop_toTopOf="parent" />

    <NumberPicker
        android:id="@+id/cols_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/rows_picker"
        app:layout_constraintTop_toBottomOf="@+id/maxTextView" />

    <TextView
        android:id="@+id/difficultyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficulty"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/difficulty_picker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cols_picker" />

    <NumberPicker
        android:id="@+id/difficulty_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficultyTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>
